@@ -187,7 +187,8 @@
                 android:stepSize="1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/wake_time_image" />
+                app:layout_constraintTop_toBottomOf="@id/wake_time_image"
+                android:isIndicator="true"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
